<resources>
    <string name="app_name">Scooter Radar</string>

    <!-- Navigation Drawer -->
    <string name="nav_header_title">Scooter Radar</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation Header</string>
    <string name="menu_fab_desc">Menu FAB</string>

    <!-- Map -->
    <string name="menu_scooter_info_bottom_sheet">Scooter Info Bottom Sheet</string>
    <string name="map_type">Map Type</string>
    <string name="map_type_default_text">Default</string>
    <string name="map_type_satellite_text">Satellite</string>
    <string name="map_type_terrain_text">Terrain</string>

    <string name="compass_fab_desc">Compass FAB</string>
    <string name="map_type_fab_desc">Map Type FAB</string>
    <string name="map_location_fab_desc">Map Location FAB</string>
    <string name="direction_fab_desc">Direction Fab</string>

    <!-- Scooter Cluster -->
    <string name="number_of_scooters">Number</string>

    <string name="scooter_cluster_image_desc">Scooter Cluster Image</string>

    <!-- Scooter Bottom Sheet-->
    <string name="rent_button_text">Rent</string>
    <string name="direction_button_text">Go To</string>

    <string name="city_desc">City</string>
    <string name="company_desc">Title</string>
    <string name="current_range_meters_desc">Current range meters</string>
    <string name="state_desc">State</string>
    <string name="escooter_image_desc">E-scooter Image</string>

    <!-- Settings -->
    <string name="preferences_title">Settings</string>

    <!-- Scooters Settings -->
    <string name="pref_scooter_number_text">Number of e-scooters to display</string>
    <string name="pref_scooter_number_key">nb_of_scooters</string>

    <string-array name="pref_scooter_number_entries">
        <item>Display 10 e-scooters</item>
        <item>Display 20 e-scooters</item>
        <item>Display 50 e-scooters</item>
        <item>Display 80 e-scooters</item>
        <item>Display 100 e-scooters</item>
    </string-array>

    <string-array name="pref_scooter_number_values">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>80</item>
        <item>100</item>
    </string-array>

    <!-- Map Settings -->
    <string name="pref_map_type_text">Map Type</string>
    <string name="pref_map_type_key">map_type</string>

    <string-array name="pref_map_type_entries">
        <item>Default Map</item>
        <item>Satellite Map</item>
        <item>Terrain Map</item>
    </string-array>

    <string-array name="pref_map_type_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Permissions -->
    <string name="location_permission_rationale_message">You need to accept location permissions to use this app</string>

    <!-- Errors -->

    <!-- Backend -->
    <string name="alert_dialog_backend_connection_error_title">Server Error</string>
    <string name="alert_dialog_backend_connection_error_desc">"Unable to connect to server. Please try again later."</string>
    <string name="alert_dialog_positive_button_backend_connection_error">Retry</string>
    <string name="alert_dialog_negative_button_backend_connection_error">Exit</string>

    <!-- Location -->
    <string name="cannot_get_location_error_message">Cannot get location.</string>

    <!-- Intents -->
    <string name="provider_unavailable_error_message">Impossible to redirect to e-scooter provider application</string>
    <string name="play_store_unavailable_error_message">"Google play store not available"</string>

    <!-- No Internet Connection-->
    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_text">Check your Internet Connection and Try Again</string>
    <string name="no_internet_button_text">Try Again</string>
</resources>