<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:icon="@drawable/ic_settings_electric_scooter"
        android:title="Scooters">

        <ListPreference
            android:defaultValue="100"
            android:dialogTitle="@string/pref_scooter_number_text"
            android:entries="@array/pref_scooter_number_entries"
            android:entryValues="@array/pref_scooter_number_values"
            android:key="@string/pref_scooter_number_key"
            android:title="@string/pref_scooter_number_text"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_settings_map"
        android:title="Map">

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/pref_map_type_text"
            android:entries="@array/pref_map_type_entries"
            android:entryValues="@array/pref_map_type_values"
            android:key="@string/pref_map_type_key"
            android:title="@string/pref_map_type_text"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>