<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_view"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.MapsFragment"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/map_type_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FFF"
        app:fabCustomSize="@dimen/secondary_fab_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#eff5ff"
        app:srcCompat="@drawable/ic_map_layers"
        android:contentDescription="@string/map_type_fab_desc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compass_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FFF"
        app:fabCustomSize="@dimen/secondary_fab_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_type_FAB"
        app:rippleColor="#eff5ff"
        app:srcCompat="@drawable/ic_baseline_compass"
        android:contentDescription="@string/compass_fab_desc" />

    <include
        android:id="@+id/map_type_selection_view"
        layout="@layout/map_type_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/map_type_FAB"
        app:layout_constraintTop_toTopOf="@+id/map_type_FAB" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/map_location_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FFF"
        app:fabCustomSize="@dimen/main_fab_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/direction_FAB"
        app:rippleColor="#eff5ff"
        app:srcCompat="@drawable/ic_baseline_my_location"
        android:contentDescription="@string/map_location_fab_desc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/direction_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FFF"
        app:fabCustomSize="@dimen/main_fab_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="#eff5ff"
        app:srcCompat="@drawable/ic_baseline_directions"
        android:contentDescription="@string/direction_fab_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>
