<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="scooter"
            type="alahyaoui.escooter.radar.models.Scooter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="70dp"
            android:layout_height="3dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/view_company"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottom_sheet_field_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_company"
                        android:layout_width="@dimen/bottom_sheet_field_image_width"
                        android:layout_height="@dimen/bottom_sheet_field_image_height"
                        android:layout_marginRight="@dimen/bottom_sheet_field_image_margin_right"
                        android:contentDescription="@string/company_desc"
                        android:src="@drawable/ic_baseline_electric_scooter" />

                    <TextView
                        android:id="@+id/text_view_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/company_desc"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/bottom_sheet_field_text_title_size"
                        android:textStyle="bold"
                        tools:text='@{scooter.company, default="Company"}' />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_city"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottom_sheet_field_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/bottom_sheet_field_image_width"
                        android:layout_height="@dimen/bottom_sheet_field_image_height"
                        android:layout_marginRight="@dimen/bottom_sheet_field_image_margin_right"
                        android:contentDescription="@string/city_desc"
                        android:src="@drawable/ic_baseline_location_city" />

                    <TextView
                        android:id="@+id/text_view_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/city_desc"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/bottom_sheet_field_text_size"
                        tools:text='@{scooter.address.replaceAll("[_-]", " ").toUpperCase(), default="City"}' />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_range"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottom_sheet_field_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/bottom_sheet_field_image_width"
                        android:layout_height="@dimen/bottom_sheet_field_image_height"
                        android:layout_marginRight="@dimen/bottom_sheet_field_image_margin_right"
                        android:contentDescription="@string/current_range_meters_desc"
                        android:src="@drawable/ic_baseline_battery" />

                    <TextView
                        android:id="@+id/text_view_current_range_meters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/current_range_meters_desc"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/bottom_sheet_field_text_size"
                        tools:text='@{String.valueOf( (int) scooter.currentRangeMeters/1000) + " km", default="Current Range Metters"}' />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_state"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottom_sheet_field_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/bottom_sheet_field_image_width"
                        android:layout_height="@dimen/bottom_sheet_field_image_height"
                        android:layout_marginRight="@dimen/bottom_sheet_field_image_margin_right"
                        android:contentDescription="@string/state_desc"
                        android:src="@drawable/ic_baseline_fact_check" />

                    <TextView
                        android:id="@+id/text_view_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/state_desc"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/bottom_sheet_field_text_size"
                        tools:text='@{!scooter.reserved ? (scooter.disabled ? "Disabled" : "Available") : "Reserved", default="State"}' />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/image_escooter"
                android:layout_width="@dimen/bottom_sheet_scooter_image_width"
                android:layout_height="@dimen/bottom_sheet_scooter_image_height"
                android:contentDescription="@string/escooter_image_desc"
                android:src="@drawable/ic_lime_escooter" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_rent"
                android:layout_width="@dimen/action_button_width"
                android:layout_height="@dimen/action_button_height"
                android:drawableTop="@drawable/ic_baseline_book_online"
                android:text="@string/rent_button_text"
                android:textColor="@color/black"
                android:layout_marginEnd="15dp"
                android:textSize="@dimen/action_button_text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_go_to"
                android:layout_width="@dimen/action_button_width"
                android:layout_height="@dimen/action_button_height"
                android:drawableTop="@drawable/ic_baseline_directions"
                android:text="@string/direction_button_text"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textSize="@dimen/action_button_text_size"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</layout>
