<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="scooter"
            type="alahyaoui.escooter.radar.models.Scooter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="70dp"
            android:layout_height="3dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/view_company"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_company"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/company_desc"
                        android:src="@drawable/ic_baseline_electric_scooter" />

                    <TextView
                        android:id="@+id/text_view_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/company_desc"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text='@{scooter.company, default="Company"}' />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_city"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_baseline_location_city"
                        android:contentDescription="@string/city_desc" />

                    <TextView
                        android:id="@+id/text_view_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/city_desc"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        tools:text='@{scooter.city.toUpperCase(), default="City"}' />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_range"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_baseline_battery"
                        android:contentDescription="@string/current_range_meters_desc" />

                    <TextView
                        android:id="@+id/text_view_current_range_meters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/current_range_meters_desc"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        tools:text='@{String.valueOf( (int) scooter.currentRangeMeters/1000) + " km", default="Current Range Metters"}' />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_state"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_baseline_fact_check"
                        android:contentDescription="@string/state_desc"/>

                    <TextView
                        android:id="@+id/text_view_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/state_desc"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        tools:text='@{!scooter.reserved ? (scooter.disabled ? "Disabled" : "Available") : "Reserved", default="State"}' />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/action_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_go_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_baseline_directions"
                        android:text="@string/direction_button_text"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/image_escooter"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_lime_escooter"
                android:contentDescription="@string/escooter_image_desc"/>

        </LinearLayout>

    </LinearLayout>

</layout>
