<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/main_activity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nav_drawer_FAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#FFF"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="#eff5ff"
            app:srcCompat="@drawable/ic_baseline_menu"
            android:contentDescription="@string/menu_fab_desc" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment_content_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/mobile_navigation" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/main_activity_drawer" />

    <RelativeLayout
        android:id="@+id/noInternetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_internet_image"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_cloud_off" />

        <TextView
            android:id="@+id/no_internet_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_internet_image"
            android:layout_centerHorizontal="true"
            android:text="@string/no_internet_connection_title"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_internet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_internet_heading"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="64dp"
            android:layout_marginVertical="32dp"
            android:gravity="center"
            android:text="@string/no_internet_connection_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_internet_text"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/black"
            android:paddingHorizontal="32dp"
            android:text="@string/no_internet_button_text"
            android:textAllCaps="false"
            app:cornerRadius="16dp" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>